k8s/ingress.dashboard.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/service-upstream: 'true'
    # cert-manager.io/cluster-issuer: "google-dnsauth"
spec:
  rules:
    - host: 'app.grascannabis.org'
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: gras-service-dashboard
                port:
                  number: 80
